<resources>
    <!-- App and Database -->
    <string name="app_name">Fantasy Football</string>
    <string name="database_name">fantasy_database</string>
    <string name="logo">Logo</string>
    <string name="logo_name">Fantasy</string>
    <string name="forward">Forward</string>
    <string name="fantasy">Fantasy</string>
    <string name="league">League</string>
    <string name="logo_welcome_message">Welcome to Fantasy</string>
    <string name="logo_subtitle">The official fantasy football game of Forward School</string>

    <!-- Drawer -->
    <string name="drawer_name">Full Name</string>
    <string name="drawer_username">Username</string>
    <string name="drawer_email">Email</string>
    <string name="drawer_logged_out_message">Please log in to use this app</string>
    <string name="add_profile_picture">Add Profile Picture</string>

    <!-- Fragment -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="team">Team</string>
    <string name="team_management">Team Management</string>
    <string name="fixtures">Fixtures</string>

    <!-- Login/Register -->
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="create_account">Create a Fantasy account</string>
    <string name="sign_into_account">Sign into your Fantasy account</string>
    <string name="optional_info">Pick your team name and upload your profile image</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="team_name">Team Name</string>
    <string name="swipe_right_to_login">Swipe Right to Login</string>
    <string name="swipe_right_to_signin">Swipe Right to Sign In</string>
    <string name="swipe_left_to_register">Swipe Left to Register</string>
    <string name="swipe_left_to_signup">Swipe Left to Sign Up</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_left">Swipe Left</string>

    <!-- Home -->
    <string name="live">Live</string>
    <string name="matches">Matches</string>
    <string name="live_matches">Live\nMatches</string>
    <string name="pick_team">Pick Team</string>
    <string name="manage_team">Manage Team</string>
    <string name="sign_me_out">Sign Me Out</string>
    <string name="running_man">Running Man</string>
    <string name="how_to_play">How To Play</string>

    <!-- Team Management -->
    <string name="team_points">Points</string>
    <string name="team_budget">Budget</string>
    <string name="team_rank">Rank</string>

    <!-- Edit Info   -->
    <string name="edit_button">Save</string>
    <string name="edit_error">Error Text</string>
    <string name="edit_full_name">Full Name</string>
    <string name="edit_username">Username</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="edit_team_name">Team Name</string>
    <string name="my_profile">My Profile</string>
    <string name="choose_image">Choose image</string>
    <string name="update_account_info">Update Account Info</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="edit_image">Edit Image</string>
    <string name="sign_out_account">Sign out of your account</string>

    <!-- Sort -->
    <string name="sort_order">Sort Order</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_name">Name</string>
    <string name="sort_price">Price</string>
    <string name="sort_done">Done</string>

    <!-- User Card -->
    <string name="user_card">User Card</string>
    <string name="user_user">User</string>
    <string name="user_username">Username</string>
    <string name="user_email">Email</string>
    <string name="user_team_name">Team Name</string>
    <string name="user_points">Points</string>
    <string name="user_rank">Rank</string>
    <string name="scroll_email"><font color='blue'>%1$s</font></string>
    <string name="scroll_team_name"><b><font color='#FFF'>%1$s</font></b></string>

    <!-- Player Card -->
    <string name="player_card">Player Card</string>
    <string name="player_name">Player Name</string>
    <string name="player_team">Player Team</string>
    <string name="player_position">Player Position</string>
    <string name="player_price">Player Price</string>

    <!--  Positions  -->
    <string name="ls">LS</string>
    <string name="rs">RS</string>

    <!-- How to play -->
    <string name="how_to_play_1">● <b>Build your squad:</b> Build your dream squad of football players from around the world.</string>
    <string name="how_to_play_2">● <b>Compete in real-time:</b> Compete against other players in leagues or tournaments.</string>
    <string name="how_to_play_3">● <b>Score points:</b> Score points for your team when your players win in real-life matches.</string>

    <!-- Alert -->
    <string name="dialog_button_positive">Confirm</string>
    <string name="dialog_button_negative">Cancel</string>
    <string name="dialog_button_neutral">OK</string>
    <string name="edit_message">Are you sure you want to proceed with these changes?</string>
    <string name="dialog_remove_title">Remove Player</string>
    <string name="dialog_remove_message">Do you want to remove %1$s?</string>
    <string name="dialog_button_remove">Remove</string>

    <!-- Success -->
    <string name="register_successful">Successfully registered</string>
    <string name="register_unsuccessful">Failed to register</string>
    <string name="login_successful">Successfully logged in</string>
    <string name="login_unsuccessful">Failed to login</string>
    <string name="logout_successful">Successfully logged out</string>
    <string name="update_successful">Updated successfully</string>
    <string name="update_image_successful">Updated profile image successfully</string>
    <string name="added_player_successful">Added %1$s to the team successfully</string>
    <string name="removed_player_successful">Removed %1$s from the team successfully</string>
    <string name="collected_points">Collected %1$d points</string>

    <!-- Errors -->
    <string name="empty_field">Please fill all the fields</string>
    <string name="empty_single_field">Please fill the field</string>
    <string name="missing_name">Name is required</string>
    <string name="missing_team_name">Team name is required</string>
    <string name="missing_email">Email is required</string>
    <string name="missing_password">Password is required</string>
    <string name="missing_image">Image is required</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="invalid_username">Username must be at least 8 characters long</string>
    <string name="invalid_password">Password must be at least 8 characters long</string>
    <string name="passwords_not_matching">Please ensure that the passwords match</string>
    <string name="no_user">User does not exist</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="wrong_credentials">Username and password do not match</string>
    <string name="user_already_exists">User already exists</string>
    <string name="team_name_already_exists">Team name already exists</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="failure">Failure</string>
    <string name="unrecognised_error">Unrecognised error</string>
    <string name="nothing">Nothing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- strings -->
    <string name="empty_string" />
    <string name="empty_spacing" />
</resources>