<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.fantasy.fantasyfootball.constant.Enums.FormError" />

        <variable
            name="viewModel"
            type="com.fantasy.fantasyfootball.viewModel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment">

        <LinearLayout
            android:id="@+id/llLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                android:src="@drawable/img2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/font1"
                android:text="@string/logo_name"
                android:textColor="@color/dark_purple_700"
                android:textSize="48sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ti_teamName"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/merriweather_regular"
            android:text="@string/optional_info"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="false"
            app:helperText="@string/empty_string"
            app:helperTextTextColor="@color/red_500"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_teamName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/team_name"
                android:inputType="text"
                android:padding="15dp"
                android:text="@={viewModel.teamName}"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ti_teamName"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/save"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_button_6"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/skip"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</layout>