<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.fantasy.fantasyfootball.core.Enums.FormError" />

        <variable
            name="viewModel"
            type="com.fantasy.fantasyfootball.presentation.ui.credentials.login.viewModel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.credentials.login.LoginFragment">

        <LinearLayout
            android:id="@+id/llLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                android:src="@drawable/img2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/font1"
                android:text="@string/logo_name"
                android:textColor="@color/dark_purple_700"
                android:textSize="48sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ti_email"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/merriweather_regular"
            android:text="@string/sign_into_account"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ti_password"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="false"
            app:helperText='@{viewModel.formErrors.contains(FormError.MISSING_EMAIL) ? "Email is required" : ""}'
            app:helperTextTextColor="@color/red_500"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:text="@={viewModel.email}"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="false"
            app:helperText='@{viewModel.formErrors.contains(FormError.MISSING_PASSWORD) ? "Password is required" : ""}'
            app:helperTextTextColor="@color/red_500"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:text="@={viewModel.password}"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ti_password"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/swipe_left"
            android:src="@drawable/ic_arrow_forward" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/swipe_left_to_signup"
            android:textSize="15sp" />

    </RelativeLayout>
</layout>