<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvPlayerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/m"
        android:layout_marginBottom="@dimen/xxs"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="start|center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/Text.Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/player_name" />

                    <TextView
                        android:id="@+id/tvPosition"
                        style="@style/Text.Base"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/player_position" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvTeam"
                    style="@style/Text.Base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_team" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPrice"
                style="@style/Text.Base"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="end|center"
                android:text="@string/player_price" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>