<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/m">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/font2"
            android:text="@string/edit_image"
            android:textSize="24sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/Circular"
            android:layout_marginVertical="10dp"
            android:src="@drawable/vector__3_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_choose_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/custom_select_button"
                android:padding="5dp"
                android:text="@string/choose_image"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_image_name"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:padding="5dp"
                android:scrollbars="vertical"
                android:background="@drawable/custom_image_text"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/edit_error"
            android:textColor="@color/red_500"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_save_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/green_900"
            android:text="@string/edit_button" />

    </LinearLayout>
</layout>