<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvPlayerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xxs"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="@dimen/xxxxs">

        <ImageView
            android:id="@+id/trophy"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/trophy"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvRanking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/player_card"
                android:gravity="start|center"
                android:text="@string/user_rank"
                android:fontFamily="@font/font2"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="start|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/user_username"
                    android:fontFamily="@font/font2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvTeamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_teamname"
                    android:fontFamily="@font/font2"
                    android:textColor="#AEADAD" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="start|center"
                android:layout_marginEnd="10dp"
                android:text="@string/user_points"
                android:fontFamily="@font/font2"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>